# tutorial

./: .gitignore  .gitmodules  Cargo.toml  README.md  _typos.toml  meta.json
.codex/skills/openspec-archive-change/: SKILL.md
.codex/skills/typst-grammar-authoring/: SKILL.md
.codex/skills/typst-grammar-authoring/agents/: openai.yaml
.codex/skills/typst-grammar-authoring/references/: grammar-catalog.json
.codex/skills/typst-grammar-authoring/scripts/: generate_grammar_catalog.py
.codex/skills/update-typst-grammar-authoring/: SKILL.md
.codex/skills/update-typst-grammar-authoring/agents/: openai.yaml
.codex/skills/update-typst-grammar-authoring/scripts/: generate_grammar_catalog.py
.github/workflows/: build.yml  gh_pages.yml  release.yml
.zed/: settings.json
crates/embedded-typst/: Cargo.toml
crates/embedded-typst/src/: lib.rs
openspec/: config.yaml
openspec/changes/archive/2026-03-15-create-english-typst-grammar-skill/: design.md
openspec/changes/archive/2026-03-15-create-english-typst-grammar-skill/specs/typst-document-authoring-skill/: spec.md
openspec/changes/create-english-typst-grammar-skill/: design.md  proposal.md  tasks.md
openspec/changes/create-english-typst-grammar-skill/specs/typst-document-authoring-skill/: spec.md
openspec/specs/typst-document-authoring-skill/: spec.md
scripts/: build.ps1  build.sh
src/: book.typ  ebook.typ  figures.typ  introduction.typ  mod.typ  sample-page.typ
src/basic/: chinese-faq.typ  content-and-style.typ  content-scope-and-style.typ  copy-and-paste.typ  latex-look.typ  math-common-cheet.typ  mod.typ  modulize-modules.typ  modulize-multi-files-doc.typ  modulize-packages.typ  png.typ  reference-bibliography.typ  reference-calculation.typ  reference-color.typ  reference-data-process.typ  reference-date.typ  reference-example.typ  reference-grammar.typ  reference-math-symbols.typ  reference-syntax-analysis.typ  reference-typebase.typ  reference-utils.typ  reference-visualization.typ  scope-and-style.typ  scripting-access.typ  scripting-base.typ  scripting-block-and-expression.typ  scripting-color-and-shape.typ  scripting-color.typ  scripting-complex.typ  scripting-content.typ  scripting-control-flow.typ  scripting-destruct.typ  scripting-layout.typ  scripting-length-and-layout.typ  scripting-length.typ  scripting-literal-and-variable.typ  scripting-literal.typ  scripting-main.typ  scripting-modules.typ  (+14 more)
src/graph/: digraph.typ  electronics.typ  mod.typ  solid-geometry.typ  state-machine.typ  statistics.typ  table.typ
src/misc/: code-syntax.typ  code-theme.typ  font-setting.typ  mod.typ  solid-geometry.typ  text-processing.typ
src/prefaces/: acknowledgement.typ  license.typ  mod.typ
src/science/: algorithm.typ  chemical.typ  theorem.typ
src/template/: book.typ  paper.typ  slides.typ
src/topics/: call-externals.typ  mod.typ  template-book.typ  template-cv.typ  template-paper.typ  writing-chinese.typ  writing-component-lib.typ  writing-math.typ  writing-plugin-lib.typ
src/tutorial/: doc-modulize.typ  doc-stateful.typ  latex-look.typ  mod.typ  other-file.typ  reference-calculation.typ  reference-color.typ  reference-counter-state.typ  reference-data-process.typ  reference-date.typ  reference-math-mode.typ  reference-type-builtin.typ  reference-typebase.typ  reference-utils.typ  reference-visualization.typ  reference-wasm-plugin.typ  scripting-block-and-expression.typ  scripting-color.typ  scripting-composite.typ  scripting-content.typ  scripting-control-flow.typ  scripting-layout.typ  scripting-literal.typ  scripting-main.typ  scripting-shape.typ  scripting-style.typ  scripting-variable.typ  writing-chinese.typ  writing-markup.typ  writing-math.typ  writing-scripting.typ
src/tutorial/stateful/: s1.typ
src/tutorial/stateful-v0.12.0/: q0.typ  q1.typ  s1.typ
typ/book/: lib.typ
typ/embedded-typst/: example.typ  lib.typ
typ/templates/: ebook.typ  page.typ  side-notes.typ  template-link.typ  term.typ  theme-style.toml
typ/typst-meta/: docs.typ
