[workspace.package]
description = "The Raindrop Book - Typst中文教程"
authors = ["Myriad-Dreamin <camiyoru@gmail.com>"]
version = "0.1.0"
edition = "2021"
readme = "README.md"
license = "Apache-2.0"
homepage = "https://github.com/typst-doc-cn/tutorial"
repository = "https://github.com/typst-doc-cn/tutorial"

[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.dependencies]
typst = "0.13.1"
typst-svg = "0.13.1"

serde_json = "1"

reflexo-typst = { git = "https://github.com/Myriad-Dreamin/typst.ts", rev = "3a08a0e66e9d2523e5497c77277d2da76da8ccf2", default-features = false }

[profile.release]
# to satisfy stubber
lto = false       # Enable link-time optimization
strip = true      # Strip symbols from binary*
opt-level = 3     # Optimize for speed
codegen-units = 2 # Reduce number of codegen units to increase optimizations
panic = 'abort'   # Abort on panic

[patch.crates-io]
typst = { git = "https://github.com/Myriad-Dreamin/typst.git", tag = "typst.ts/v0.6.0-rc1" }
typst-library = { git = "https://github.com/Myriad-Dreamin/typst.git", tag = "typst.ts/v0.6.0-rc1" }
typst-syntax = { git = "https://github.com/Myriad-Dreamin/typst.git", tag = "typst.ts/v0.6.0-rc1" }
typst-utils = { git = "https://github.com/Myriad-Dreamin/typst.git", tag = "typst.ts/v0.6.0-rc1" }
typst-svg = { git = "https://github.com/Myriad-Dreamin/typst.git", tag = "typst.ts/v0.6.0-rc1" }
# reflexo-typst = { git = "https://github.com/Myriad-Dreamin/typst.ts", tag = "v0.5.5-rc7" }
# typst-ts-core = { path = "../../rust/typst.ts/core" }
# typst-ts-compiler = { path = "../../rust/typst.ts/compiler" }

typst-shim = { git = "https://github.com/Myriad-Dreamin/tinymist", rev = "2ca6e7f62d7064d7d584ed360fb11cec4c67d810" }
tinymist-std = { git = "https://github.com/Myriad-Dreamin/tinymist", rev = "2ca6e7f62d7064d7d584ed360fb11cec4c67d810" }
tinymist-task = { git = "https://github.com/Myriad-Dreamin/tinymist", rev = "2ca6e7f62d7064d7d584ed360fb11cec4c67d810" }
tinymist-world = { git = "https://github.com/Myriad-Dreamin/tinymist", rev = "2ca6e7f62d7064d7d584ed360fb11cec4c67d810" }
tinymist-project = { git = "https://github.com/Myriad-Dreamin/tinymist", rev = "2ca6e7f62d7064d7d584ed360fb11cec4c67d810" }

[workspace.lints.rust]
missing_docs = "warn"

[workspace.lints.clippy]
uninlined_format_args = "warn"
missing_safety_doc = "warn"
undocumented_unsafe_blocks = "warn"
