[workspace.package]
description = "The Raindrop Book - Typst中文教程"
authors = ["Myriad-Dreamin <camiyoru@gmail.com>"]
version = "0.1.0"
edition = "2021"
readme = "README.md"
license = "Apache-2.0"
homepage = "https://github.com/typst-doc-cn/tutorial"
repository = "https://github.com/typst-doc-cn/tutorial"

[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.dependencies]
typst = "0.13.1"
typst-svg = "0.13.1"

serde_json = "1"

reflexo-typst = { version = "0.6.0-rc1", default-features = false }

[profile.release]
# to satisfy stubber
lto = false       # Enable link-time optimization
strip = true      # Strip symbols from binary*
opt-level = 3     # Optimize for speed
codegen-units = 2 # Reduce number of codegen units to increase optimizations
panic = 'abort'   # Abort on panic

[patch.crates-io]
typst = { git = "https://github.com/Myriad-Dreamin/typst.git", tag = "typst.ts/v0.6.0-rc1" }
typst-library = { git = "https://github.com/Myriad-Dreamin/typst.git", tag = "typst.ts/v0.6.0-rc1" }
typst-syntax = { git = "https://github.com/Myriad-Dreamin/typst.git", tag = "typst.ts/v0.6.0-rc1" }
typst-utils = { git = "https://github.com/Myriad-Dreamin/typst.git", tag = "typst.ts/v0.6.0-rc1" }
typst-svg = { git = "https://github.com/Myriad-Dreamin/typst.git", tag = "typst.ts/v0.6.0-rc1" }
# reflexo-typst = { git = "https://github.com/Myriad-Dreamin/typst.ts", tag = "v0.5.5-rc7" }
# typst-ts-core = { path = "../../rust/typst.ts/core" }
# typst-ts-compiler = { path = "../../rust/typst.ts/compiler" }

[workspace.lints.rust]
missing_docs = "warn"

[workspace.lints.clippy]
uninlined_format_args = "warn"
missing_safety_doc = "warn"
undocumented_unsafe_blocks = "warn"
