[package]
name = "embedded-typst"
description = "Run typst inside of typst"
authors.workspace = true
version.workspace = true
license.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
typst.workspace = true
typst-svg.workspace = true
reflexo-typst.workspace = true
serde_json.workspace = true
flate2 = "1"
tar = "0.4"

wasm-minimal-protocol = { git = "https://github.com/astrale-sharp/wasm-minimal-protocol", optional = true }

[features]
typst-plugin = ["wasm-minimal-protocol"]

default = ["typst-plugin"]

[lints]
workspace = true
